# flextop_fast_distance

./: CMakeLists.txt  README.md
include/: flextop_FD.h
models/: ani_model_cpu.pt
src/: CMakeLists.txt  flextop_FD.cpp  flextop_FD.h  sinkhorn_knopp.cpp  sinkhorn_knopp.h
tests/: CMakeLists.txt  test_flextop.cpp  test_time.cpp
